# RiotManifest

./: .gitignore  README.md  _test.py  main.py  pyproject.toml
.github/workflows/: python-publish.yml
docs/: API.md  TESTING.md  diff.md  extractor.md  game.md  manifest.md
scripts/: _uv.sh  bench_downloader.py  select_cdn_ip.py  test_wad_diff_with_bin_report.py
src/riotmanifest/: __init__.py  chunk_hash.py  external_manifest.py  extractor.py  file_pool.py  game.py  http_client.py  manifest.py  manifest_downloader.py  native_manifest.py
src/riotmanifest/core/: __init__.py  binary_parser.py  chunk_hash.py  errors.py
src/riotmanifest/diff/: __init__.py  manifest_diff.py  path_providers.py  wad_header_diff.py  wad_path_resolution.py
src/riotmanifest/downloader/: __init__.py  scheduler.py
src/riotmanifest/extractor/: __init__.py  cache.py  wad_extractor.py
src/riotmanifest/game/: __init__.py  factory.py  inspection.py  metadata.py
src/riotmanifest/utils/: __init__.py  http_client.py
tests/: test_downloader_transport_compare.py  test_extractor_download_unit.py  test_extractor_game_branches.py  test_game_class_alias.py  test_game_extractor_refactor.py  test_http_client_unit.py  test_manifest_diff.py  test_manifest_download_speed.py  test_manifest_inspector.py  test_manifest_parser_branches.py  test_manifest_pipeline.py  test_manifest_runtime_branches.py  test_wad_path_resolution.py
