[project]
name = "riotmanifest"
version = "2.0.0"
description = "Add your description here"
authors = [
    { name = "Virace", email = "Virace@aliyun.com" }
]
dependencies = [
    "loguru>=0.7.3",
    "pyzstd>=0.19.1",
    "aiohttp>=3.13.3",
    "urllib3>=2.5.0",
    "blake3>=1.0.8",
    "league-tools>=1.1.1",
]
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
homepage = "https://github.com/Virace/RiotManifest"
repository = "https://github.com/Virace/RiotManifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["src/riotmanifest"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
exclude = [".gitignore"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
markers = [
    "integration: 真实网络集成测试（含压力测试）",
]

[tool.ruff]
line-length = 130
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "D"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D101", "D102", "D103"]
